# IRTargeting2

./: .gitignore  CMakeLists.txt  README.md  claude.md  config_manager.cpp  config_manager.h  frame_processor.cpp  frame_processor.h  homography.cpp  homography.h  main.cpp  osd_renderer.cpp  osd_renderer.h  settings.cpp  settings.h  udp_receiver.cpp  udp_sender.cpp  udp_sender.h
